# cillium-hubble-agent

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.agent  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  test.yaml
agent/: __init__.py  cilium_discovery.py  event_publisher.py  hubble_monitor.py  interface_manager.py  main.py  netlink_monitor.py  sysfs_poller.py
api/: __init__.py  main.py
api/models/: schemas.py
api/routes/: __init__.py  events.py  interfaces.py  labs.py  links.py  topology.py  websocket.py
api/services/: cilium_discovery.py  containerlab_parser.py  event_bus.py  hubble_monitor.py  hubble_service.py  k8s_client.py  lab_service.py  link_state_service.py
demo/: Dockerfile.iperf-ssh  README.md  clabernetes-topology.yaml  clabernetes-values.yaml  continuous-traffic.sh  dashboard.sh  dc2-topology.yaml  docker-compose.yml  entrypoint.sh  kind-topology.yaml  list-labs.sh  setup-topology.sh  show-bandwidth.sh  start-traffic.sh  traffic.sh
demo/docs/: api.md  kind-dev-setup.md
docs/: README.md  api.md  deployment.md  helm.md  kind-baremetal.md
hubble_collector/: Dockerfile  collector.py  tls.py  topology.py
k8s/: configmap.yaml  deployment.yaml  gateway.yaml  hubble-collector.yaml  kind-cilium.yaml  sidecar-example.yaml  sidecar-rbac.yaml
proto/: generate.sh
samples/: lab-dc1.yaml  test_api.py  test_labs.py
sidecar/: Dockerfile  Dockerfile.collector  agent.py  collector.py  common.py  connectivity.py  inject-sidecar.sh
tests/: conftest.py  test_collector.py  test_connectivity.py  test_e2e.py  test_events.py  test_flow_metrics.py  test_health.py  test_interfaces.py  test_link_state_service.py  test_links.py  test_sidecar_agent.py  test_topology.py
(+26 files in other folders)
