[project]
name = "network-monitor-sidecar"
version = "1.0.0"
description = "Self-contained sidecar for per-interface metrics collection with HTTP API and Redis Streams"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "redis>=5.0",
    "fakeredis>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["demo/api/generated/"]
