[project]
name = "network-monitor"
version = "1.0.0"
description = "Real-time network monitoring — sidecar agent, Hubble flow collector, Redis time-series"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar", "hubble_collector"]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "fakeredis>=2.0",
    # Sidecar
    "redis>=5.0",
    # Hubble collector
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "kubernetes>=29.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
