[project]
name = "network-monitor"
version = "1.0.0"
description = "Real-time network monitoring — sidecar agent, VXLAN bandwidth metrics, Redis time-series"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "fakeredis>=2.0",
    "redis>=5.0",
    "kubernetes>=29.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
